2001-01-11  Nick Clifton  <nickc@redhat.com>

	* gas/arm/adrl.s: Add global label 'foo'.
	* gas/arm/adrl.d: Expect to see references to 'foo' in the
	disassembly.  COFF and ELF disassemblys should now be the same.

Wed Jan 10 15:14:54 MET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.exp: Add ssemmx2 and sse2 tests.
	(sse2.d, sse2.s, ssemmx2.d, ssemmx2.s): New tests.

2001-01-09  Nick Clifton  <nickc@redhat.com>

	* gas/arm/pic.d: Fix patterns to match new behaviour of
	disassembler.
	inst.d: Fix patterns to match new behaviour of disassembler.

2001-01-03  Philip Blundell  <pb@futuretv.com>

	* gas/vtable/vtable.exp: Don't run tests on Alpha.

Sat Jan  6 13:34:07 MET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.exp: Add tests for presence of 32bit versus 64bit output
	format; run both 64bit and 32bit tests when format is available;
	add x86_64 test.
	* x86_64.s: New file.
	* x86_64.d: New file.

2001-01-02  Nick Clifton  <nickc@redhat.com>

	* gas/arm/arm.exp: Pass -marmv3 to msr-bad test, since the
	instruction is legal in v5.  Also fix expected error message.

2001-01-01  Philip Blundell  <philb@gnu.org>

	* gas/arm/adrl.s, gas/arm/pic.s, gas/arm/msr-bad.s: New tests.
	* gas/arm/arm.exp: Run them.
	* gas/arm/adrl.d, gas/arm/pic.d: Expected results for above.
	* gas/arm/arm6.s: Also test uppercase `CPSR' and `SPSR'.

2000-12-22  H.J. Lu  <hjl@gnu.org>

	* gas/i386/intel.s: Replace "nop" with ".p2align 4,0".
	* gas/i386/intel.d: Updated.

2000-12-12  Jim Wilson  <wilson@redhat.com>

	* gas/ia64/dv-imply.d, gas/ia64/dv-mutex.d, gas/ia64/dv-safe.d,
	gas/ia64/dv-srlz.d, gas/ia64/opc-m.d: Update.

2000-12-12  Nick Clifton  <nickc@redhat.com>

	* gas/vtable/vtable.exp: Fix formatting.

	* gas/arm/elsegundo.s: New Test (currently disabled).
	* gas/arm/elsegundo.d: Expected test results.

2000-12-11  H.J. Lu  <hjl@gnu.org>

	* gas/i386/intel.d: Adjusted for the a.out assembler.
	* gas/i386/intel.s: Likewise.

2000-12-09  Nick Clifton  <nickc@redhat.com>
