@@ -13,6 +13,9 @@ if ![istarget "m68hc11-*-*"] then {
 run_dump_test insns
 run_dump_test lbranch
 run_dump_test all_insns
+run_dump_test insns-dwarf2
+run_dump_test lbranch-dwarf2
 
 # Some 68HC12 tests
 run_dump_test opers12
+run_dump_test opers12-dwarf2
